name: eddy
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Eddy: easy EDGAR downloading
description:
data-dir: ""

executable find10k
    build-depends: base -any, http-conduit -any, resourcet -any, time -any, xml-conduit -any, network -any,
                   conduit >=1.0.0.0, mtl -any, resourcet -any, monad-control -any, text -any, xml-types -any
    main-is: Find10k.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -O2